K8S/Ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true' 
spec:
  rules:
   - host: sonha2610.com
     http:
      paths:
        - path: /api/platform
          pathType: Prefix
          backend:
            service:
              name: platforms-clusterip-srv
              port:
                number: 8080
        - path: /api/c/platform
          pathType: Prefix
          backend:
            service:
              name: commands-clusterip-srv
              port:
                number: 8080

# kubectl port-forward -n ingress-nginx svc/ingress-nginx-controller 8080:80
